<resources>
    <string name="app_name">Лаб. 5</string>
    <string name="objects_title">Об\'єкти</string>
    <string name="point_title">Крапка</string>
    <string name="line_title">Лінія</string>
    <string name="rectangle_title">Прямокутник</string>
    <string name="ellipse_title">Еліпс</string>
    <string name="circle_line_title">Лінія з кругами</string>
    <string name="cube_title">Куб</string>
    <string name="delete_title">Очистити</string>
    <string name="back_title">Назад</string>
    <string name="next_title">Вперед</string>
    <string name="table_title">Таблиця</string>
    <string name="save_title">Зберегти</string>
    <string name="open_title">Відкрити</string>
    <string name="info_title">Довідка</string>
    <string name="info">Ласкаво просимо в програму для малювання! Це потужний інструмент, який дозволяє вам виразити свою творчість через малювання та створення графіки. Незалежно від того, чи ви новачок або досвідчений художник, ця програма створена для задоволення вашої творчої потреби.</string>
    <string name="close">Закрити</string>
    <string name="name_title">Назва</string>
    <string name="x1_title">x1</string>
    <string name="y1_title">y1</string>
    <string name="x2_title">x2</string>
    <string name="y2_title">y2</string>
    <string name="cancel">Скасувати</string>
    <string name="name_of_file_title">Назва файлу</string>
    <string name="alert">Куди лізеш! Більше не можна!</string>
    <string name="success">Файл успішно збережено!</string>
</resources>