<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/objects"
        android:title="@string/objects_title"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/point"
                android:onClick="activateButton"
                android:title="@string/point_title" />

            <item
                android:id="@+id/line"
                android:onClick="activateButton"
                android:title="@string/line_title" />

            <item
                android:id="@+id/rectangle"
                android:onClick="activateButton"
                android:title="@string/rectangle_title" />

            <item
                android:id="@+id/ellipse"
                android:onClick="activateButton"
                android:title="@string/ellipse_title" />

            <item
                android:id="@+id/circle_line"
                android:onClick="activateButton"
                android:title="@string/circle_line_title" />

            <item
                android:id="@+id/cube"
                android:onClick="activateButton"
                android:title="@string/cube_title" />

        </menu>

    </item>

    <item
        android:id="@+id/back_tool"
        android:icon="@drawable/back_icon"
        android:title="@string/back_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/next_tool"
        android:icon="@drawable/next_icon"
        android:title="@string/next_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/delete_tool"
        android:icon="@drawable/delete_icon"
        android:title="@string/delete_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/save"
        android:title="@string/save_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/open"
        android:title="@string/open_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/info"
        android:title="@string/info_title"
        app:showAsAction="ifRoom" />

</menu>